[package]
name = "hello"
version = "0.1.0"
authors = ["sireliah <sajuukk@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
libp2p = { git = "https://github.com/sireliah/rust-libp2p", rev = "0c496afb9f7c634196d7b97e01a458abcb3dc90e", default_features = false }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-datachannel-wasm = "0.1.2"
futures = "0.3.17"
futures-macro = "0.3.17"
js-sys = "0.3.55"
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"] }
send_wrapper = { version = "0.5.0", features = ["futures"] }
libp2p = { git = "https://github.com/sireliah/rust-libp2p", rev = "0c496afb9f7c634196d7b97e01a458abcb3dc90e", features = ["wasm-bindgen", "wasm-ext", "websocket", "wasm-ext-websocket", "mplex", "noise", "ping", "rendezvous"], default_features = false }
libp2p-webrtc = { git = "https://github.com/sireliah/libp2p-webrtc", rev = "a381f7aecf5915df63f6ea04a000547609058107" }
ws_stream_wasm = "0.7.3"
wasm-bindgen-futures = "0.4.28"
async-channel = "1.6.1"
async-std = { version = "1.7.0", features = [ "unstable" ] }
prost = "0.7.0"
prost-build = "0.9.0"
hex = "0.4.2"
md-5 = "0.8.0"


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[build-dependencies]
prost-build = "0.9.0"
# TODO: enable
# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
